@@ -13,6 +13,7 @@ abstract = Web Document System
 [PodSyntaxTests]
 [PodCoverageTests]
 [CriticTests]
+[CheckExtraTests]
 
 [AutoPrereqs]
 skip = ^Fixture
